--- a/src/app/componentes/funciones/registro-funcion/registro-funcion.component.html
+++ b/src/app/componentes/funciones/registro-funcion/registro-funcion.component.html
@@ -2,11 +2,75 @@
 
   <p class="h4 mb-4 text-center">Registrar Función</p>
 
-  <input type="text" id="pelicula" class="form-control mb-4" placeholder="Película">
+  <label for="peliculas">Seleccione película</label>
+  <select id="peliculas" class="custom-select form-control mb-4">
+    <option selected>Seleccione...</option>
+    <option value="1">Harry Potter</option>
+    <option value="2">El Señor de los anillos</option>
+    <option value="3">Los juegos del hambre</option>
+  </select>
 
-  <input type="number" id="sala" class="form-control mb-4" placeholder="Sala">
+  <label for="salas">Elija una sala</label>
+  <select id="salas" class="custom-select form-control mb-4">
+    <option selected>Seleccione...</option>
+    <option value="1">Sala 1</option>
+    <option value="2">Sala 2</option>
+    <option value="3">Sala 3</option>
+  </select>
 
-  <input type="text" id="asiento" class="form-control mb-4" placeholder="Asiento">
+  <label for="horario">Horarios</label>
+  <div id="horario" class="custom-control custom-checkbox">
+    <input type="checkbox" class="custom-control-input" id="hora1">
+    <label class="custom-control-label" for="hora1">12:00pm Hrs.</label>
+  </div>
+  <div id="horario" class="custom-control custom-checkbox">  
+    <input type="checkbox" class="custom-control-input" id="hora2">
+    <label class="custom-control-label" for="hora2">1:00pm Hrs.</label>
+  </div>
+  <div id="horario" class="custom-control custom-checkbox">
+    <input type="checkbox" class="custom-control-input" id="hora3">
+    <label class="custom-control-label" for="hora3">2:00pm Hrs.</label>
+  </div>
+  <div id="horario" class="custom-control custom-checkbox">
+    <input type="checkbox" class="custom-control-input" id="hora4">
+    <label class="custom-control-label" for="hora4">3:00pm Hrs.</label>
+  </div>
+  <div id="horario" class="custom-control custom-checkbox">
+    <input type="checkbox" class="custom-control-input" id="hora5">
+    <label class="custom-control-label" for="hora5">4:00pm Hrs.</label>
+  </div>
+  <div id="horario" class="custom-control custom-checkbox">
+    <input type="checkbox" class="custom-control-input" id="hora6">
+    <label class="custom-control-label" for="hora6">5:00pm Hrs.</label>
+  </div>
+  <div id="horario" class="custom-control custom-checkbox">
+    <input type="checkbox" class="custom-control-input" id="hora7">
+    <label class="custom-control-label" for="hora7">6:00pm Hrs.</label>
+  </div>
+  <div id="horario" class="custom-control custom-checkbox">
+    <input type="checkbox" class="custom-control-input" id="hora8">
+    <label class="custom-control-label" for="hora8">7:00pm Hrs.</label>
+  </div>
+  <div id="horario" class="custom-control custom-checkbox">
+    <input type="checkbox" class="custom-control-input" id="hora9">
+    <label class="custom-control-label" for="hora9">8:00pm Hrs.</label>
+  </div>
+  <div id="horario" class="custom-control custom-checkbox">
+    <input type="checkbox" class="custom-control-input" id="hora10">
+    <label class="custom-control-label" for="hora10">9:00pm Hrs.</label>
+  </div>
+  <div id="horario" class="custom-control custom-checkbox">
+    <input type="checkbox" class="custom-control-input" id="hora11">
+    <label class="custom-control-label" for="hora11">10:00pm Hrs.</label>
+  </div>
+  <div id="horario" class="custom-control custom-checkbox">
+    <input type="checkbox" class="custom-control-input" id="hora12">
+    <label class="custom-control-label" for="hora12">11:00pm Hrs.</label>
+  </div>
+  <div id="horario" class="custom-control custom-checkbox">
+    <input type="checkbox" class="custom-control-input" id="hora13">
+    <label class="custom-control-label" for="hora13">12:00pm Hrs.</label>
+  </div>
 
   <button class="btn btn-info btn-block my-4" type="submit">Registrar</button>
 </form>
