--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -10,7 +10,7 @@
 
   <div class="text-center">
       <p>No tienes cuenta?
-          <a [routerLink]="['/registro-usuario']" routerLinkActive="router-link-active" >Registrate!</a>
+          <a [routerLink]="['usuarios/registro-usuario']" routerLinkActive="router-link-active" >Registrate!</a>
       </p>
   </div>
 </form>
