--- a/src/app/componentes/peliculas/registro-pelicula/registro-pelicula.component.html
+++ b/src/app/componentes/peliculas/registro-pelicula/registro-pelicula.component.html
@@ -4,12 +4,12 @@
 
   <input type="text" id="titulo" class="form-control mb-4" placeholder="Título">
 
-  <label for="fecha">Fecha</label>
-  <input type="date" id="fecha" class="form-control mb-4" placeholder="Fecha">
-
   <input type="text" id="fecha" class="form-control mb-4" placeholder="Clasificación">
 
   <input type="text" id="fecha" class="form-control mb-4" placeholder="Género">
+  
+  <label for="duracion">Duración (minutos)</label>
+  <input type="number" max="3" id="duracion" class="form-control mb-4" placeholder="">
 
   <button class="btn btn-info btn-block my-4" type="submit">Registrar</button>
 </form>
