vista de usuarios y peliculas

--- a/src/app/componentes/peliculas/registro-pelicula/registro-pelicula.component.html
+++ b/src/app/componentes/peliculas/registro-pelicula/registro-pelicula.component.html
@@ -11,5 +11,12 @@
   <label for="duracion">Duración (minutos)</label>
   <input type="number" max="3" id="duracion" class="form-control mb-4" placeholder="">
 
+  <div class="input-group mb-3">
+    <div class="custom-file">
+      <input type="file" class="custom-file-input" id="imagen">
+      <label class="custom-file-label" for="imagen">Seleccionar imagen</label>
+    </div>
+  </div>
+
   <button class="btn btn-info btn-block my-4" type="submit">Registrar</button>
 </form>
