--- a/src/app/componentes/usuarios/ver-usuarios/ver-usuarios.component.html
+++ b/src/app/componentes/usuarios/ver-usuarios/ver-usuarios.component.html
@@ -1,3 +1,22 @@
-<p>
-  ver-usuarios works!
-</p>
+<div style="margin: 10px;">
+  <table class="table">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">ID</th>
+        <th scope="col">Usuario</th>
+        <th scope="col">Contraseña</th>
+        <th scope="col"></th>
+        <th scope="col"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>EquisFuture</td>
+        <td>1234</td>
+        <td><button type="button" name="" id="" class="btn btn-warning btn-sm btn-block">Editar</button></td>
+        <td><button type="button" name="" id="" class="btn btn-danger btn-sm btn-block">Eliminar</button></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
