--- a/src/app/componentes/usuarios/registro-usuario/registro-usuario.component.html
+++ b/src/app/componentes/usuarios/registro-usuario/registro-usuario.component.html
@@ -1,11 +1,11 @@
-<form class="border border-light p-5">
+<form class="border border-light p-5" #form="ngForm">
 
   <p class="h4 mb-4 text-center">Registro de Usuario</p>
 
-  <input type="email" id="usuario" class="form-control mb-4" placeholder="Usuario">
+  <input [(ngModel)]="usuario" name="usuario" id="usuario" type="email"  class="form-control mb-4" placeholder="Usuario">
 
-  <input type="password" id="contra" class="form-control mb-4" placeholder="Contraseña">
+  <input [(ngModel)]="contra" name="contra" id="contra" type="password" class="form-control mb-4" placeholder="Contraseña">
   <small id="contra-minimo" class="form-text text-muted mb-4">8 caracteres mínimo.</small>
 
-  <button class="btn btn-info btn-block my-4" type="submit">Registrarse</button>
+  <button (click)="registrarUsuario()" class="btn btn-info btn-block my-4" type="btn">Registrarse</button>
 </form>
