Me lleva la verga

--- a/src/app/componentes/funciones/ver-funciones/ver-funciones.component.html
+++ b/src/app/componentes/funciones/ver-funciones/ver-funciones.component.html
@@ -1,3 +1,7 @@
-<p>
-  ver-funciones works!
-</p>
+<div class="form-check">
+  <label class="form-check-label">
+    <input type="checkbox" class="form-check-input" name="horas" id="horas" value="checkedValue" checked>
+    Display value
+  </label>
+</div>
+{{funciones}}
