--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,12 +1,20 @@
-<form class="border border-light p-5">
+<form (ngSubmit)="submitLogin()" #loginForm="ngForm" class="border border-light p-5" >
 
   <p class="h4 mb-4 text-center">Iniciar Sesión</p>
 
-  <input type="email" id="usuario" class="form-control mb-4" placeholder="Usuario">
+  <input type="text" class="form-control mb-4" placeholder="Nombre de Usuario"
+  id="nombre" required [(ngModel)]="logeo.nombre" name="nombre" #nombre="ngModel">
+  <div [hidden]="nombre.valid || nombre.pristine" class="alert alert-danger">
+    Introduzca Su Nombre De Usuario
+  </div>
 
-  <input type="password" id="contra" class="form-control mb-4" placeholder="Contraseña">
+  <input type="password" id="contra" class="form-control mb-4" placeholder="Contraseña"
+  required [(ngModel)]="logeo.contra" name="contra" #contra="ngModel">
+  <div [hidden]="contra.valid || contra.pristine" class="alert alert-danger">
+    Introduzca Su Correo
+  </div>
 
-  <button class="btn btn-info btn-block my-4" type="submit">Entrar</button>
+  <button class="btn btn-info btn-block my-4" type="submit" [disabled]="!loginForm.form.valid">Entrar</button>
 
   <div class="text-center">
       <p>No tienes cuenta?
